Closed
Bug 1619383
Opened 6 years ago
Closed 6 years ago
posinset and setsize wrong for rows in google drive
Categories
(Core :: Disability Access APIs, defect, P2)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla75
| Tracking | Status | |
|---|---|---|
| firefox75 | --- | fixed |
People
(Reporter: jdiggs, Assigned: MarcoZ)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
Steps to reproduce:
- View google drive's file list (a table/grid, where each row corresponds to a file)
- Use an accessibility inspector (e.g. accerciser) to view the object attributes of each row
Expected results: posinset would correspond to the row index and setsize to the row count -- or be absent.
Actual results: posinset is 1 and setsize is 1 on all rows.
Impact: Orca believes Firefox and says that each file is "1 of 1" rather than using the table and/or table cell interfaces to get the real value.
Compare to Chromium which doesn't provide posinset and setsize, but does provide rowindex (on the cell). Orca does (as of a few minutes ago) use this information to correctly report the file position and file count to the user.
Comment 1•6 years ago
|
||
Related to bug 1455066. Same underlying cause (intervening elements between the grid and its rows), but the code in question is in a different place.
Priority: -- → P2
See Also: → 1455066
| Assignee | ||
Comment 2•6 years ago
|
||
Depends on D65158
Updated•6 years ago
|
Assignee: nobody → mzehe
Status: NEW → ASSIGNED
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e8c84db69252
Calculate group position information correctly for ARIA grids, r=Jamie
Comment 4•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in
before you can comment on or make changes to this bug.
Description
•