Bug 1619383 - Calculate group position information correctly for ARIA grids, r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D65160